--- a/_config.yml
+++ b/_config.yml
@@ -38,15 +38,15 @@ avatar: "Melia-Peters-103-Edit.jpg"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "##8FBC8F"
-navbar-text-col: "#2F4F4F"
-navbar-children-col: "##8FBC8F"
-page-col: "#2F4F4F"
+navbar-col: "#BC8F8F"
+navbar-text-col: "#FFFAF0"
+navbar-children-col: "#BC8F8F"
+page-col: "#FFFAF0F"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "##8FBC8F"
+footer-col: "#BC8F8F"
 footer-text-col: "#777777"
-footer-link-col: "#2F4F4F"
+footer-link-col: "#FFFAF0"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
