--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ navbar-links:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
     - Getting Started: "getstarted" 
+    - Table Demo: "table-demo"
 Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
