--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#BC8F8F"
 footer-text-col: "#777777"
-footer-link-col: "#FFFAF0"
+footer-link-col: "#708090"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
