--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/Melia-Peters-103-Edit.jpg"
+avatar: "http://meliapetersen.github.io/Melia-Peters-103-Edit.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
