--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     - Learn markdown: "http://www.markdowntutorial.com/"
-    - Getting Started: "getstarted" 
+    - Getting Started: "gettingstarted" 
   Table Demo: "table-demo"
   Author's home: "http://deanattali.com"
 
